CSS fix to avoid unwanted hoizontal scrollbar for autocomplete suggestions for editor in external window

--- a/extension/scripts/3rdparty-custom-fixes/codemirror/magicss-codemirror.css
+++ b/extension/scripts/3rdparty-custom-fixes/codemirror/magicss-codemirror.css
@@ -36,4 +36,8 @@ html .CodeMirror-hints {
             Without this, in full-screen-editor (external editor window), these hints may lead to scrollbar in page overall.
     */
     max-height: min(40vh, 20em);
+
+    /* Useful in avoiding full page horizontal scrollbar when editor is open in external window and the autocomplete
+       suggestions list is too wide */
+    max-width: 90vw;
 }
